--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
   "scripts": {
+    "browserify": "npm run build && browserify -s tcrypto lib | uglifyjs -c > srpit.js",
     "clean": "rimraf lib",
     "build": "npm run clean && echo Using TypeScript && tsc --version && tsc --pretty",
-    "test": "npm run build && mocha --require ts-node/register --recursive \"test/**/*.test.ts\""
+    "test": "npm run build && mocha --require ts-node/register --recursive \"test/**/*.test.ts\"",
+    "webpack": "npm run build && webpack --mode production --config webpack.config.js"
   },
   "dependencies": {
     "jsbn": "^1.1.0",
@@ -26,16 +28,24 @@
   "devDependencies": {
     "@types/chai": "^4.1.3",
     "@types/jsbn": "^1.2.29",
-    "@types/mocha": "^5.2.0",
-    "@types/node": "^10.1.2 ",
+    "@types/mocha": "^5.2.1",
+    "@types/node": "^10.3.0",
     "benchmark": "^2.1.4",
+    "browserify": "^16.2.2",
     "chai": "^4.1.2",
-    "mocha": "^5.1.1",
+    "mocha": "^5.2.0",
     "rimraf": "^2.6.2",
-    "ts-node": "^6.0.0",
-    "typescript": "^2.8.3"
+    "ts-node": "^6.0.5",
+    "typescript": "^2.9.1",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "^4.10.2",
+    "webpack-command": "^0.2.0"
   },
   "engines": {
     "node": ">=8.0.0"
+  },
+  "browser": {
+    "./lib/sha": "./lib/sha-browser.js",
+    "./lib/random": "./lib/random-browser.js"
   }
 }
